fixed issue where scroll bar would show on mobile

--- a/src/components/DayCard/dayCard.css
+++ b/src/components/DayCard/dayCard.css
@@ -28,7 +28,7 @@
 }
 
 .DayCard .dayCardPadding {
-  padding: 2%;
+  padding:  3%;
 }
 
 .DayCard .overFlowYAuto {
